# rust-microservice-demo

./: README.md
java-consumer/: pom.xml
java-consumer/src/main/java/me/liangdi/cloud/rustmicroserviceconsumer/: RustMicroserviceConsumerApplication.java
java-consumer/src/main/java/me/liangdi/cloud/rustmicroserviceconsumer/service/: OpenFeignRustService.java
java-consumer/src/main/java/me/liangdi/cloud/rustmicroserviceconsumer/web/: OpenFeignController.java  RestTemplateController.java
java-consumer/src/main/resources/: application.properties
java-consumer/src/test/java/me/liangdi/cloud/rustmicroserviceconsumer/: RustMicroserviceConsumerApplicationTests.java
rust-microservice/: Cargo.toml
rust-microservice/src/: main.rs
rust-microservice/src/nacos/: mod.rs
