[package]
name = "rust-microservice"
version = "0.1.0"
authors = ["Liangdi <wu@liangdi.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1"
serde = "1"
reqwest = { version = "0.10.4" , features= ["blocking"]}
async-std = "1.5"
percent-encoding = "2.1.0"
